--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>my site!</title>
+        <title>my site 2022!</title>
     </head>
     <body>
         <h1>This is my GitHub Pages website</h1>
