--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
         <title>my site 2022!</title>
     </head>
     <body>
-        <h1>This is my GitHub Pages website</h1>
+        <h1>This is my GitHub Pages website 2022</h1>
     </body>
 </html>
