--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         <button data-page="page1">Page 1</button>
         <button data-page="pages2">Page 2</button>
         <button data-page="page3">Page 3</button>
+        <button data-page="page5">Page 5</button>
 
         <div id="page1">
             <h1>This is page 1.</h1>
